@@ -1,6 +1,7 @@
 cm4all-workshop (2.0.26) unstable; urgency=low
 
   * fix crash when database is unavailable during startup
+  * cron: fix integer underflow in "@once" job delay
   * systemd: start Workshop after PostgreSQL
 
  --   
